# baseball

./: exploration.ipynb  exploration2.ipynb  fangraphs.py  fangraphs_html_exploration.ipynb  find_duplicates.py  how_to_execute_files.txt  integrate_injury_data.py  integrate_statcast_data.py  pyproject.toml  release_speed.ipynb  requirements.txt  statcast.py  statcast_raw.py  statcast_relevant.py
